<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/mm"
    android:fitsSystemWindows="true"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center"
    tools:context=".SignUp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/upperColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f79663"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="235dp"
            android:layout_height="191dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logoapp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#f79663"
            android:textSize="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.206" />

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text_bg"
                android:drawableLeft="@drawable/ic_username"
                android:fontFamily="casual"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text_bg"
                android:drawableLeft="@drawable/ic_username"
                android:fontFamily="casual"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="14dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edit_text_bg"
            android:drawableLeft="@drawable/ic_email"
            android:fontFamily="casual"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/Pass"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_edit_text_bg"
            android:drawableLeft="@drawable/ic_password"
            android:fontFamily="casual"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@drawable/custom_edit_text_bg"
            android:drawableLeft="@drawable/ic_password"
            android:fontFamily="casual"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/gendergroup"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#f79663"
                    android:fontFamily="casual"
                    android:text="@string/male"
                    android:textColorLink="#1976D2" />

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#f79663"
                    android:fontFamily="casual"
                    android:text="@string/female" />

            </RadioGroup>

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="190dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text_bg"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textSize="14dp"
                android:fontFamily="casual" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/registerCard"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#f79663"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#1857bd"
                android:textColorLink="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="Have An Account?"
            android:textColor="#f79663"
            android:textSize="10dp" />

        <TextView
            android:id="@id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#f79663"
            android:textColorLink="#03A9F4"
            android:textSize="14dp" />


        <TextView
            android:id="@+id/lowerColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f79663"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978" />


    </LinearLayout>

</ScrollView>