<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mm"
    tools:context=".editProfileStudentPage">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="349dp"
        android:layout_height="626dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="204dp"
                android:layout_height="187dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.091">

                <ImageView
                    android:id="@+id/studentPicture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/profilepicturecircle"
                    android:src="#f79663" />

                <TextView
                    android:id="@+id/nameTXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="Student Name"
                    android:textColor="#f79663"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/idTXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/student_id"
                    android:textColor="#f79663"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/uploadBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload" />

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_username"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/chooseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Choose" />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_username"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_phone"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_password"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/password"
                    android:inputType="none|textPassword" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="220dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_password"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/confirm_password"
                    android:inputType="none|textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_email"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edit_text_bg"
                    android:drawableLeft="@drawable/ic_location"
                    android:ems="10"
                    android:fontFamily="casual"
                    android:hint="@string/address"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:background="@drawable/custom_edit_text_bg"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="casual"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="casual"
                        android:text="@string/female" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#f79663"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/saveBtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/save"
                            android:textColor="#1857bd"
                            android:textColorLink="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cancelCard"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    app:cardBackgroundColor="#f79663"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/cancelBtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/cancel"
                            android:textColor="#1857bd"
                            android:textColorLink="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/upperColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:background="#f79663"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/lowerColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:background="#f79663"
        android:gravity="center"
        android:textColor="#f79663"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>