<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/mm"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center"
    tools:context=".mainStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upperColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f79663" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="200dp"
            android:layout_height="182dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/studentPicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/profilepicturecircle"
                android:src="#f79663" />

            <TextView
                android:id="@+id/nameTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="Student Name"
                android:textColor="#f79663"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/student_id"
                android:textColor="#f79663"
                android:textSize="10dp" />
        </LinearLayout>


        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="75dp"
            android:layout_height="27dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/holo_red_dark"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="Logout" />

        <Button
            android:id="@+id/QRCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="#f79663"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="Get My QR Code" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:text="Email:"
                android:textColor="#f79663"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/phoneTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:scrollHorizontally="true"
                android:text="Phone Number:"
                android:textColor="#f79663"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/addressTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:scrollHorizontally="true"
                android:text="Address:"
                android:textColor="#f79663"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/genderTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:paddingBottom="10dp"
                android:scrollHorizontally="true"
                android:text="Gender::"
                android:textColor="#f79663"
                android:textSize="18dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#f79663"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/viewCoursesBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/view_courses"
                    android:textColor="#1857bd"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#f79663"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/editInfoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/edit_info"
                    android:textColor="#1857bd"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="#f79663"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/takeAttendBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/take_attendance"
                    android:textColor="#1857bd"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/lowerColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f79663"
            android:gravity="center"
            android:textColor="#f79663" />

    </LinearLayout>
</ScrollView>